# Pocket-Dropper

./: CMakeLists.txt  README.md  constants.h  constants.hpp  enums.h  main.cpp  obstacle.cpp  obstacle.h  obstacle.hpp  player.cpp  player.h  player.hpp  projectile.cpp  projectile.h  sprite.cpp  sprite.h
Include/: UI.cpp  UI.hpp  backdrop.hpp  constants.hpp  enemy.cpp  enemy.hpp  enum.hpp  memory.cpp  memory.hpp  platform.cpp  platform.hpp  player.cpp  player.hpp  projectile.cpp  projectile.h  raygui.cpp  raygui.h  raylib-aseprite.cpp  sound.cpp  sound.hpp  sprite.cpp  sprite.h  spriteUtils.cpp  spriteUtils.hpp  weapon.cpp  weapon.hpp
Resources/asprite/: BackDrop.aseprite  Concept_01.aseprite  Concept_02.aseprite  Enemy_01.aseprite  Explosion.aseprite  Ice_Block.aseprite  Idunno.aseprite  LittleDude.aseprite  Nail-LikeMaybe.aseprite  Pin.aseprite  Player-Ship.aseprite  ScoreBoar.aseprite  WallBreakEffect.aseprite
